--- a/README.Rmd
+++ b/README.Rmd
@@ -56,4 +56,11 @@ data <- js_data_get(obj)
 
 
 ```
+You can also create a new object through create_obj function and upload it to the database
+
+```r
+
+create_obj(web="severURL",obj_name="name of your object",body="dataframe or a json object you want to upload",ID,KEY)
+
+```
 
